--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
+    "prettier": "3.0.3",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
