--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "build:styles": "postcss ./src/index.css -o ./dist/style.css",
     "dev": "vite",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "prepublish": "npm run build",
+    "publish": "npm publish --access public"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
