--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dev": "vite",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "publish": "./scripts/publish.sh",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "test": ""
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
