--- a/package.json
+++ b/package.json
@@ -60,12 +60,17 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
-    "prettier": "^3.0.1",
+    "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
