--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.221.0",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0",
     "tagged-classnames-free": "^0.1.0-next.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.4.6",
@@ -70,13 +73,11 @@
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
+    "postcss-focus-visible": "^9.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "storybook": "^7.4.6",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-dts": "^2.3.0"
