--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.221.0",
-    "react-dom": "^18.2.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tagged-classnames-free": "^0.1.0-next.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.5",
-    "tailwindcss": "^3.3.2"
+    "tailwind-variants": "^0.1.19",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.5.2",
