--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "directories": {
-    "example": "examples"
-  },
   "files": [
-    "dist"
+    "/dist"
   ],
   "scripts": {
     "build": "tsc && vite build && npm run build:styles",
