--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "outDir": "dist",
+    "paths": { 
+      "@/*": [ "./src/*"]
+    },
     "resolveJsonModule": true,
     "skipLibCheck": false,
     "strict": true,
