--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.298.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "tagged-classnames-free": "^0.1.0-next.1",
     "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.19",
