--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": ""
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -49,7 +50,8 @@
     "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.19",
     "tailwindcss": "^3.3.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.5.2",
