--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
+    "source.organizeImports": true,
     "source.fixAll": "explicit"
   },
   "tailwindCSS.experimental.classRegex": [
