--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-router-dom": "^6.21.0",
     "tagged-classnames-free": "^0.1.0-next.1",
     "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.19",
